cmake_minimum_required( VERSION  3.3 )

project( PoC )

# set c++ std version
set( CMAKE_CXX_STANDARD  14 )
# fail if c++14 is not available
set( CMAKE_CXX_STANDARD_REQUIRED  ON )
# disable compiler-specific extensions
set( CMAKE_CXX_EXTENSIONS  OFF )

set ( TZPATH "${_tzdata_archive_dir}/tzdata" )

file ( READ "${TZPATH}/africa" AFRICA NEWLINE )
file ( READ "${TZPATH}/antarctica" ANTARCTICA NEWLINE )
file ( READ "${TZPATH}/asia" ASIA NEWLINE )
file ( READ "${TZPATH}/australasia" AUSTRALASIA NEWLINE )
file ( READ "${TZPATH}/backward" BACKWARD NEWLINE )
file ( READ "${TZPATH}/etcetera" ETCETERA NEWLINE )
file ( READ "${TZPATH}/europe" EUROPE NEWLINE )
file ( READ "${TZPATH}/pacificnew" PACIFICNEW NEWLINE )
file ( READ "${TZPATH}/northamerica" NORTHAMERICA NEWLINE )
file ( READ "${TZPATH}/southamerica" SOUTHAMERICA NEWLINE )
file ( READ "${TZPATH}/systemv" SYSTEMV NEWLINE )
file ( READ "${TZPATH}/leapseconds" LEAPSECONDS NEWLINE )

STRING ( REGEX REPLACE "\n" "\\\\n" AFRICA ${AFRICA} )
STRING ( REGEX REPLACE "#" "//" AFRICA ${AFRICA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" AFRICA ${AFRICA} )

STRING ( REGEX REPLACE "\n" "\\\\n" ANTARCTICA ${ANTARCTICA} )
STRING ( REGEX REPLACE "#" "//" ANTARCTICA ${ANTARCTICA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" ANTARCTICA ${ANTARCTICA} )

STRING ( REGEX REPLACE "\n" "\\\\n" AUSTRALASIA ${AUSTRALASIA} )
STRING ( REGEX REPLACE "#" "//" AUSTRALASIA ${AUSTRALASIA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" AUSTRALASIA ${AUSTRALASIA} )

STRING ( REGEX REPLACE "\n" "\\\\n" ASIA ${ASIA} )
STRING ( REGEX REPLACE "#" "//" ASIA ${ASIA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" ASIA ${ASIA} )

STRING ( REGEX REPLACE "\n" "\\\\n" BACKWARD ${BACKWARD} )
STRING ( REGEX REPLACE "#" "//" BACKWARD ${BACKWARD} )
STRING ( REGEX REPLACE "\"" "\\\\\"" BACKWARD ${BACKWARD} )

STRING ( REGEX REPLACE "\n" "\\\\n" ETCETERA ${ETCETERA} )
STRING ( REGEX REPLACE "#" "//" ETCETERA ${ETCETERA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" ETCETERA ${ETCETERA} )

STRING ( REGEX REPLACE "\n" "\\\\n" EUROPE ${EUROPE} )
STRING ( REGEX REPLACE "#" "//" EUROPE ${EUROPE} )
STRING ( REGEX REPLACE "\"" "\\\\\"" EUROPE ${EUROPE} )

STRING ( REGEX REPLACE "\n" "\\\\n" PACIFICNEW ${PACIFICNEW} )
STRING ( REGEX REPLACE "#" "//" PACIFICNEW ${PACIFICNEW} )
STRING ( REGEX REPLACE "\"" "\\\\\"" PACIFICNEW ${PACIFICNEW} )

STRING ( REGEX REPLACE "\n" "\\\\n" NORTHAMERICA ${NORTHAMERICA} )
STRING ( REGEX REPLACE "#" "//" NORTHAMERICA ${NORTHAMERICA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" NORTHAMERICA ${NORTHAMERICA} )

STRING ( REGEX REPLACE "\n" "\\\\n" SOUTHAMERICA ${SOUTHAMERICA} )
STRING ( REGEX REPLACE "#" "//" SOUTHAMERICA ${SOUTHAMERICA} )
STRING ( REGEX REPLACE "\"" "\\\\\"" SOUTHAMERICA ${SOUTHAMERICA} )

STRING ( REGEX REPLACE "\n" "\\\\n" SYSTEMV ${SYSTEMV} )
STRING ( REGEX REPLACE "#" "//" SYSTEMV ${SYSTEMV} )
STRING ( REGEX REPLACE "\"" "\\\\\"" SYSTEMV ${SYSTEMV} )

STRING ( REGEX REPLACE "\n" "\\\\n" LEAPSECONDS ${LEAPSECONDS} )
STRING ( REGEX REPLACE "#" "//" LEAPSECONDS ${LEAPSECONDS} )
STRING ( REGEX REPLACE "\"" "\\\\\"" LEAPSECONDS ${LEAPSECONDS} )

configure_file( main.cpp.in  main.cpp @ONLY )

#add_definitions(-DBUILDWITHTZDB=1)

add_executable( PoC
    ${CMAKE_BINARY_DIR}/poc/main.cpp
)

